--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.16)
-project(baub_chess)
+project(chameleon)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(baub_chess main.cpp
-        ChessEngine/board_representation.cpp ChessEngine/board_representation.h ChessEngine/misc.h ChessEngine/display.cpp ChessEngine/display.h ChessEngine/debug.cpp ChessEngine/debug.h ChessEngine/evaluation.cpp ChessEngine/evaluation.h ChessEngine/search.cpp ChessEngine/search.h ChessEngine/uci.cpp ChessEngine/uci.h)
+add_executable(chameleon main.cpp
+        ChessEngine/board_representation.cpp ChessEngine/board_representation.h ChessEngine/misc.h ChessEngine/display.cpp ChessEngine/display.h ChessEngine/debug.cpp ChessEngine/debug.h ChessEngine/evaluation.cpp ChessEngine/evaluation.h ChessEngine/search.cpp ChessEngine/search.h)
