--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(chameleon)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(chameleon main.cpp
-        ChessEngine/position.cpp ChessEngine/position.h ChessEngine/display.cpp ChessEngine/display.h ChessEngine/debug.cpp ChessEngine/debug.h ChessEngine/evaluation.cpp ChessEngine/evaluation.h ChessEngine/search.cpp ChessEngine/search.h)
+        ChessEngine/position.cpp ChessEngine/position.h ChessEngine/display.cpp ChessEngine/display.h ChessEngine/debug.cpp ChessEngine/debug.h ChessEngine/evaluation.cpp ChessEngine/evaluation.h ChessEngine/search.cpp ChessEngine/search.h ChessEngine/uci.cpp ChessEngine/uci.h)
