--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,15 @@
 cmake_minimum_required(VERSION 3.16)
 project(chameleon)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 20)
+
+set(CMAKE_CXX_FLAGS "-Wall -Wextra")
+set(CMAKE_CXX_FLAGS_DEBUG "-g")
+set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
 add_executable(chameleon main.cpp
-        ChessEngine/position.cpp ChessEngine/position.h ChessEngine/display.cpp ChessEngine/display.h ChessEngine/debug.cpp ChessEngine/debug.h ChessEngine/evaluation.cpp ChessEngine/evaluation.h ChessEngine/search.cpp ChessEngine/search.h ChessEngine/uci.cpp ChessEngine/uci.h)
+        src/types.h
+        src/bitboard.h src/bitboard.cpp
+        src/movegen.h  src/movegen.cpp
+        src/position.h src/position.cpp
+     )
